--- a/css/main.css
+++ b/css/main.css
@@ -12,14 +12,14 @@ body {
 section {
   display: flex;
   flex-wrap: wrap;
-  width: 25px;
-  height: 25px;
+  width: 10rem;
+  height: 10rem;
   margin: 1rem;
 }
 
 div {
-  width: 5px;
-  height: 5px;
+  width: 2rem;
+  height: 2rem;
   background: #FFF;
 }
 
