--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,19 @@
 body {
-  display: flex;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   position: absolute;
   width: 100%;
   height: 100%;
   background: #50514F;
+}
+
+div.character {
+  display: flex;
+  justify-content:center;
+}
+
+div:not(.character) {
+  margin: 20px;
 }
 
 section {
@@ -17,9 +24,13 @@ section {
   margin: 1rem;
 }
 
-div {
+span {
   width: 2rem;
   height: 2rem;
   background: #FFF;
 }
 
+p {
+  text-align: center;
+  font-style: italic;
+}
