--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,12 @@
 body {
+  display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   position: absolute;
   width: 100%;
   height: 100%;
   background: #50514F;
-}
-
-div.character {
-  display: flex;
-  justify-content:center;
-}
-
-div:not(.character) {
-  margin: 20px;
 }
 
 section {
@@ -24,13 +17,9 @@ section {
   margin: 1rem;
 }
 
-span {
+div {
   width: 2rem;
   height: 2rem;
   background: #FFF;
 }
 
-p {
-  text-align: center;
-  font-style: italic;
-}
